comment unnecessary old methods